Fix CVE-2020-15228 - Bygg og deploy
Co-authored-by: Kevin Sillerud <kevin.sillerud@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ./gradlew shadowJar -x test
-          echo ::set-env name=version::$(./gradlew -q printVersion)
+          echo "version=$(./gradlew -q printVersion)" >> $GITHUB_ENV
       - name: Build Docker images
         run: |
           docker build --tag ${IMAGE} .
